
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* msg_control; int msg_controllen; char* msg_name; int msg_namelen; scalar_t__ msg_iovlen; } ;
struct mmsghdr {TYPE_1__ msg_hdr; } ;


 scalar_t__ EINVAL ;
 int EXIT_FAILURE ;
 int __NR_sendmmsg ;
 scalar_t__ errno ;
 int exit (int ) ;
 int perror (char*) ;
 int syscall (int ,int,struct mmsghdr*,int,int ) ;

void socket_sendmmsg(int sock, char *buffer) {
 struct mmsghdr msg[1];

 msg[0].msg_hdr.msg_iovlen = 0;


 msg[0].msg_hdr.msg_control = &buffer[0];
 msg[0].msg_hdr.msg_controllen = 2048;


 msg[0].msg_hdr.msg_name = "root";
 msg[0].msg_hdr.msg_namelen = 1;

 int rv = syscall(__NR_sendmmsg, sock, msg, 1, 0);
 if (rv == -1 && errno != EINVAL) {
  perror("[-] sendmmsg()");
  exit(EXIT_FAILURE);
 }
}
